Modularized css files

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -16,117 +16,24 @@
  /*@import 'whatever';*/
  @import url(//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css);
 
+
+/* I have put modularized the css files, and listed them below for ease of navigation
+
+Carousel
+Head-footer
+Index
+Loader
+Movie-play
+Rating-star
+Search
+Splash
+
+*/
+
+
 body {
   font-family: sans-serif;
-}
-
-.selection-gif, .movie-gif {
-  max-width: 55%;
-  max-height: 300px;
-
-}
-
-.movies{
-  padding-bottom: 40px;
-  padding-top: 40px;
-}
-
-.movie-selection{
-  display: flex;
-  margin: 25px;
-}
-
-.moving-search, .moving-trailer{
-  display: block;
-  margin: 25px;
-}
-
-.movie-gif {
-  float: right;
-
-  margin-right: 25px
-}
-
-.trailer-text, .selection-text{
-  padding: 10px;
-  font-size: 1.6vw;
-}
-
-div.login-signup > a{
-  font-size: 14px;
-  border-radius: 5px;
-  color: white;
-  background-color: red;
-  border: none;
-  padding: 10px;
-}
-
-div.contact-info, div.login-signup{
-  width: 50%;
-}
-
-div.movie-play{
-  height: 100%;
-  width: 100%;
-}
-
-
-
-img.movie-searched-poster{
-  max-width: 300px;
-  max-height: 300px;
-  min-height: 215px;
-  min-width: 100px;
-  width: auto;
-  height: auto;
-  padding: 10px;
-  margin-left: 10px;
-  margin-right: 10px;
-  padding: 10px;
-}
-
-img.movie-searched-poster:hover{
-  border-left: red 2px solid;
-  cursor: pointer;
-  max-height: 315px;
-}
-
-div.search-list{
-  display: flex;
-  float: right;
-}
-
-button.search{
-  left: 100%;
-  display: flex;
-  position: relative;
-}
-
-#logo-search{
-  top: 1%;
-  left: 2%;
-}
-
-
-
-div.movie-playing{
-  position: fixed;
-  display: flex;
-  top: 7%;
-  z-index: -1;
-  float: right;
-  border: none;
-  height: 94%;
-  width: 98%;
-  right: 1%;
-  padding: 2px;
-}
-
-iframe.movie-player{
-  width: 100%;
-  height:90%;
-  border: none;
-  background-color: #1A1A1A;
+  background-color: #141414;
 }
 
 p{
@@ -151,288 +58,9 @@ div.root{
   color: white;
 }
 
-.movie-button-div{
-  width: 50%;
-
-}
-
-.title-div{
-  display: flex;
-}
-
-div.slider-decorator-2{
-  display: none;
-}
-
-img.movie{
-  height: 100%;
-  width: auto;
-  right: -98%;
-  position: absolute;
-  padding: 2px;
-
-}
-
-h2.title{
-  color: white;
-  font-size: 20px;
-  position: absolute;
-  top: 35px;
-  left: 10px;
-  opacity: none;
-}
-a.movie-play-header{
-  text-decoration: none;
-  color: red;
-  top: 2%;
-  position: absolute;
-  font-size: 30px;
-  left: 2%;
-  z-index: 1
-}
-
-div.hide-these:hover{
-  opacity: .85;
-
-}
-
-div.hide-these{
-  position: absolute;
-  width: 40%;
-  padding: 8px;
-  opacity: 0.0;
-  height: 60%;
-  top: 15%;
-  background: #1A1A1A;
-
-}
-
-h1.title{
-  top: 5%;
-  color: white;
-  font-size: 2.6vw;
-  padding: 7px;
-  position: absolute;
-}
-
-input.login-input{
-  margin-left: 50px;
-  min-width: 200px;
-}
-
-input.button.modal{
-  position: absolute;
-  top: 68%;
-  left: 76%;
-}
-
-input.button.submit.modal{
-  position: absolute;
-  top: 68%;
-  left: 60%;
-}
-
-ul.errors{
-  color: red;
-  font-weight: bold;
-  font-size: 14px;
-  position: fixed;
-  top: 18%;
-  left: 51%;
-  list-style: none;
-}
-
-p.login-modal{
-  margin-left: 50px;
-}
-
-p.description{
-  position: absolute;
-  padding: 7px;
-  top: 21%;
-  color: white;
-  font-size: 1.8vw;
-  margin: 3px;
-}
-
-p.year{
-  color: white;
-  position: absolute;
-  padding: 7px;
-  top: 47%;
-  font-size: 1.8vw;
-}
-p.genre{
-  color: white;
-  position: absolute;
-  padding: 7px;
-  top: 59%;
-  font-size: 1.8vw;
-}
-p.actors{
-  color: white;
-  position: absolute;
-  padding: 7px;
-  top: 70%;
-  font-size: 1.7vw;
-}
-
-img.Movie-poster:hover {
-  cursor: pointer;
-  transform:scale(1.14);
-  transition: all 110ms ease-in;
-  z-index:1000;
-}
-
-.play-button{
-  height: 40px;
-  right: 65%;
-  bottom: 65%;
-  position: relative;
-  cursor: pointer;
-}
-.splash-play-button{
-  height: 60px;
-  left: 73%;
-  top: 40%;
-  position: relative;
-  cursor: pointer;
-}
-
-img.movie-poster{
-  max-height: 200px;
-  width: auto;
-  height: auto;
-  min-width: 55%;
-  min-height: 70%;
-  padding: 10px;
-  margin-left: 10px;
-  margin-right: 10px;
-  z-index: 100;
-
-}
-
-span.main-movies{
-  padding: 10px;
-  margin-top: 10px;
-  margin-bottom: 10px;
-}
-
-h2.signup-or-login{
-  text-align: center;
-  color: white;
-}
-
-label.signup-or-login{
-  color: white;
-}
-
-header.logo{
-  display: flex;
-  width: 50%;
-  position: absolute;
-
-}
-
-nav.header > p{
-  color: white;
-  position: fixed;
-  top: 0%;
-  right: 58%;
-  font-size: 112%;
-}
-a.header-link{
-  text-decoration: none;
-  color: red;
-  top: -7%;
-  position: absolute;
-  font-size: 30px;
-  left: -5%;
-}
-
-a.splash-logo{
-  left: 3%;
-}
-
-.copyright{
-  padding-left: 15px;
-  width: 300px;
-}
-
-button.movie-play{
-  position: absolute;
-  right: 2%;
-  top: 0%;
-  cursor: pointer;
-}
-h2.header-name{
-  display: flex;
-  float: right;
-}
-img.splash-image{
-  width: 600px;
-  height: 600px;
-  z-index: -100;
-}
-
-a.back-to-main{
-  font-size: 13px;
-    border-radius: 5px;
-    color: white;
-    background-color: red;
-    border: none;
-    margin-top: 10px;
-    margin-right: 6px;
-    margin-bottom: 7px;
-    position: relative;
-    left: 81%;
-    padding: 0px;
-    padding-right: 13px;
-    padding-left: 13px;
-}
-
-div.over-demo{
-  position: absolute;
-  top: 20%;
-  margin-left: 10%;
-  color: white;
-  min-width: 200px;
-}
-
-h2.attention-line{
-  color: white;
-  font-size: 5vmax;
-
-}
-p.tag-line{
-  color: white;
-  font-size: 3vmax;
-}
-
-div.splash-div{
-  height: 960px;
-
-  /*background: url('http://res.cloudinary.com/dqiuefax1/image/upload/v1480898800/a7AM8L_i4vcko.gif') no-repeat center;*/
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
-
-}
-
-div.index-page{
-  margin: 0;
-  padding: 0;
-  border: none;
-  text-decoration: none;
-  display: flex;
-  flex-direction: column;
-}
-
-
-iframe.splash-player{
-  width: 100%;
-  height: 700px;
+.movies{
+  padding-bottom: 40px;
+  padding-top: 40px;
 }
 
 input.button {
@@ -483,70 +111,14 @@ p.logo.linked{
 
 
 
-.linkedin-div, div.login-div{
-  width: 50%;
-  float: left;
-  display: inline-block;
-}
-
-div.legal, div.logo-div{
-  width: 50%;
-  float: left;
-}
-
-div.contact-info > div {
-  color: white;
-  padding-top: 15px;
-}
-
-.splash-gif{
-  width: 94%;
-  margin: 3%;
-  margin-top: 70px;
-}
-
-button.splash-demo{
-  position: absolute;
-  font-size: 2vmax;
-  padding: 10px;
-  padding-left: 20px;
-  padding-right: 20px;
-  cursor: pointer;
-}
-
-header{
-  position: absolute;
-}
-
-nav.footer > p {
-  color: white;
-  padding-left: 10px;
-}
-
 div.main-header{
   display: flex;
   min-height: 300px;
   justify-content: space-around;
   background-color: #1A1A1A;
-
   width: 100%;
 }
 
-img.display-film{
-  display: flex;
-  min-width: 40%;
-  min-height: 100%;
-}
-img.display-film:first-child{
-  float: left;
-}
-img.display-film:last-child{
-  float: right;
-}
-
-div.slider.carousel.bottom{
-  padding-bottom: 55px;
-}
 
 div.main-header > button{
   max-height: 30px;
@@ -565,60 +137,6 @@ div.main-header > input.button{
   cursor: pointer;
 }
 
-h1.exit{
-  color: white;
-  position: fixed;
-  right: 2%;
-  font-size: 40px;
-  padding: 10px;
-}
-
-h1.exit:hover{
-  color: red;
-  cursor: pointer;
-}
-
-
-input.search{
-  height: 32px;
-  min-width: 270px;
-  display: inline-block;
-  position: fixed;
-  margin: 11px;
-  z-index: 3;
-  right: 15%;
-  font-size: 18px;
-  color:gray;
-  background-image:url('http://i47.tinypic.com/r02vbq.png');
-  background-repeat:no-repeat;
-  background-position:right ;outline:0;
-}
-
-body{
-  background-color: #141414;
-}
-
-input.play{
-  position: absolute;
-  top: 80%;
-  left: 95%;
-  padding: 4px;
-  z-index: 5;
-  padding-left: 10px;
-  padding-right: 10px;
-  font-size: 1.6vw;
-}
-
-input.movie-play{
-  position: absolute;
-  top: 50%;
-  left: 75%;
-  padding: 4px;
-  z-index: 5;
-  padding-left: 10px;
-  padding-right: 10px;
-  font-size: 1.6vw;
-}
 
 h3.label{
   color: white;
@@ -627,9 +145,7 @@ h3.label{
   margin-left: 20px;
 }
 
-h3.IMDB-50{
-  background-color: #1A1A1A;
-}
+
 
 input#unique{
   left: 40%;
@@ -644,80 +160,6 @@ input#unique{
   font-size: 3vw;
 }
 
-div.logout.header-bar{
-  position: absolute;
-    right: 1%;
-    float: right;
-}
-
-div.search.header-bar{
-  width: 25%;
-    right: 10%;
-    padding-top: 5px;
-    position: fixed;
-}
-
-nav{
-  display: flex;
-  z-index: 13;
-  width: 100%;
-  height: 9%;
-  opacity: .93;
-  position: fixed;
-
-  background: #1A1A1A;
-}
-
-nav.header{
-  top: 0%;
-}
-
-nav.footer{
-  bottom: 0%;
-  display: flex;
-    z-index: 13;
-    width: 100%;
-    height: 7%;
-    opacity: .93;
-    position: fixed;
-    background: #1A1A1A;
-  /*justify-content: space-around;*/
-}
-
-/*a.footer-bar{
-  color: red;
-  /*position: relative;
-  right: 5%;
-  margin-left:30%;
-  padding:10px;*/
-
-
-/*a.footer-bar:first-child{
-}
-
-a.footer-bar:last-child{
-  position: absolute;
-  left:90%
-}*/
-
-
-
-.github-div{
-  color: red;
-  right:86%
-}
-
-.linkedin-div{
-  color:red;
-  left:48%
-}
-
-/*p.footer-bar{
-  color: white;
-  position: absolute;
-  left: 3%;
-}*/
-
 
 p.search{
   color: white;
@@ -725,357 +167,4 @@ p.search{
   right: 58%;
   position: fixed;
   font-size: 1.6vw;
-}
-
-nav >button.header-bar{
-  position: fixed;
-  right: 4%;
-  top: 0%
-}
-h1.logo{
-  color: red;
-  display: flex;
-  top: 0%;
-  position: fixed;
-  font-size: 36px;
-  margin-left: 20px;
-  margin-top: 7px;
-}
-
-div.main-content-splash{
-  display: inline-block;
-  position: absolute;
-  top: 5%;
-  width: 45%;
-  font-size: 1.6vw;
-  margin: 20px;
-  padding: 10px;
-  opacity: .8;
-  overflow: auto;
-  flex-direction: column;
-  z-index: 2;
-  background: linear-gradient(to right, #1A1A1A, 80% rgba(0,0,0,0));
-}
-
-
-h3.IMDB-50{
-  position: relative;
-  top: 7%;
-  z-index: 3;
-}
-div.search-results{
-  width: 85%;
-  height: 100%;
-  margin-left: 15%;
-  position: absolute;
-  top: 7%;
-}
-
-h1.main-content-splash{
-  text-decoration: none;
-  color: white;
-  font-size: 3vw;
-}
-
-p.main-content-splash{
-  color: white;
-  width: 100%;
-  font-size: 1.6vw;
-}
-
-img.main-content-splash{
-  display: inline-block;
-  margin: 10px;
-  top: 8%;
-  right: 8%;
-  padding-right: 5px;
-  position: relative;
-  float: right;
-  width: 35%;
-    max-width: 400px;
-}
-
-
-div.main-div{
-  width: 100%;
-}
-
-div.main-div:first-child{
-  background-color: #1A1A1A;
-  background-image:
-    linear-gradient(
-      #1A1A1A,
-      #141414 30%
-    );
-}
-
-div.IMDB-50{
-  background-image:
-    linear-gradient(
-      #1A1A1A,
-      #141414 30%
-    );
-}
-
-div.slider{
-  bottom: 1%;
-    background-color: #141414;
-    padding: 15px;
-    min-height: 150px;
-    width: 90% !important;
-    min-width: 675px;
-    margin-left: 40px;
-
-}
-
-div.content-holder{
-  width: 100%;
-  min-height: 650px;
-  background-color: #1A1A1A
-}
-
-#splash-poster:hover{
-  cursor: pointer;
-}
-
-span.main-movies{
-  display: flex;
-  max-height: 300px;
-  max-width: 800px;
-}
-
-span.main-movies > img{
-  margin: 10px;
-  padding: 10px;
-  justify-content: space-around;
-  max-width: 100px;
-  max-height: 200px;
-}
-
-
-a.linkedin, button.login{
-  float: right;
-  position: relative;
-  left: 48%;
-}
-
-a.linkedin, a.github, p.copyright {
-  color: white;
-}
-
-
-fieldset, label { margin: 0; padding: 0; }
-body{ margin: 1px; }
-
-
-/****** Style Star Rating Widget *****/
-
-.rating {
-  border: none;
-  min-width: 115px;
-  max-width: 300px;
-  left: 20%;
-  position: absolute;
-  bottom: 5%;
-
-}
-
-.rating > input { display: none; }
-.rating > label:before {
-  margin: 3px;
-  font-size: 14px;
-  font-family: FontAwesome;
-  display: inline-block;
-  content: "\f005";
-  text-shadow: 1px 1px black;
-}
-
-.rating > label {
-  color: white;
- float: right;
-}
-
-/***** CSS Magic to Highlight Stars on Hover *****/
-
-.rating > input:checked ~ label, /* show gold star when clicked */
-.rating:not(:checked) > label:hover, /* hover current star */
-.rating:not(:checked) > label:hover ~ label { color: #E00609;  } /* hover previous stars in list */
-
-.rating > input:checked + label:hover, /* hover current star when changing rating */
-.rating > input:checked ~ label:hover,
-.rating > label:hover ~ input:checked ~ label, /* lighten current selection */
-.rating > input:checked ~ label:hover ~ label { color: #E00609;  }
-
-div.loading
-{
-  background-color: #1A1A1A;
-  width: 4000px;
-  height: 4000px;
-
-
-}
-
-#loader {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  margin-top: -2.7em;
-  margin-left: -2.7em;
-  width: 5.4em;
-  height: 5.4em;
-  background-color: #1A1A1A;
-}
-
-#hill {
-  position: absolute;
-  width: 7.1em;
-  height: 7.1em;
-  top: 1.7em;
-  left: 1.7em;
-  background-color: transparent;
-  border-left: .25em solid whitesmoke;
-  -webkit-transform: rotate(45deg);
-  -moz-transform: rotate(45deg);
-  -ms-transform: rotate(45deg);
-  transform: rotate(45deg);
-}
-
-#hill:after {
-  content: '';
-  position: absolute;
-  width: 7.1em;
-  height: 7.1em;
-  left: 0;
-  background-color: #1A1A1A;
-}
-
-#box {
-  position: absolute;
-  left: 0;
-  bottom: -.1em;
-  width: 1em;
-  height: 1em;
-  background-color: transparent;
-  border: .25em solid whitesmoke;
-  border-radius: 15%;
-  -webkit-transform: translate(0, -1em) rotate(-45deg);
-  -moz-transform: translate(0, -1em) rotate(-45deg);
-  -ms-transform: translate(0, -1em) rotate(-45deg);
-  transform: translate(0, -1em) rotate(-45deg);
-  animation: push 2.5s cubic-bezier(.79, 0, .47, .97) infinite;
-}
-
-@keyframes push {
-  0% {
-    transform: translate(0, -1em) rotate(-45deg);
-  }
-  5% {
-    transform: translate(0, -1em) rotate(-50deg);
-  }
-  20% {
-    transform: translate(1em, -2em) rotate(47deg);
-  }
-  25% {
-    transform: translate(1em, -2em) rotate(45deg);
-  }
-  30% {
-    transform: translate(1em, -2em) rotate(40deg);
-  }
-  45% {
-    transform: translate(2em, -3em) rotate(137deg);
-  }
-  50% {
-    transform: translate(2em, -3em) rotate(135deg);
-  }
-  55% {
-    transform: translate(2em, -3em) rotate(130deg);
-  }
-  70% {
-    transform: translate(3em, -4em) rotate(217deg);
-  }
-  75% {
-    transform: translate(3em, -4em) rotate(220deg);
-  }
-  100% {
-    transform: translate(0, -1em) rotate(-225deg);
-  }
-}
-
-*{
-  box-sizing: border-box;
-}
-
-.carousel-outer{
-  height: 350px;
-  width: 90%;
-  position: relative;
-  padding-left: 40px;
-}
-
-.Movie-poster{
-  padding: 10px;
-  max-height: 350px;
-  max-width: 400px;
-  min-height: 320px
-}
-
-.IMDB-Top-50{
-  padding-top: 40px;
-}
-
-.Actor-list{
-  width: 15%;
-    top: 10%;
-    padding: 5px;
-    padding-left: 40px;
-    background-color: #2196F3;
-    position: absolute;
-}
-
-.carousel{
-  font-size: 0px;
-  height: 600px;
-  white-space: nowrap;
-  overflow: hidden;
-}
-
-.carousel-outer .carousel >div:before {
-  content: '';
-  display: inline-block;
-  vertical-align: middle;
-  height: 100%;
-}
-
-
-.carousel-outer .carousel >div{
-  height: 190px;
-  width: 190px;
-  font-size: 16px;
-  display: inline-block;
-  margin: 5px;
-  text-align: center;
-}
-
-.arrow{
-  color: white;
-  text-align: center;
-  height: 30px;
-  width: 30px;
-  display: inline-block;
-  line-height: 15px;
-  position: absolute;
-  top: 50%;
-  top: calc(50%- 15px);
-  cursor:pointer;
-}
-button.arrow.left{
-  left: 0;
-  background-image: url(http://res.cloudinary.com/dqiuefax1/image/upload/v1491704306/back_1_t6yozi.png);
-  background-size: cover;
-  background-color: white;
-}
-button.arrow.right{
-  right: -40px;
-  background-image: url(http://res.cloudinary.com/dqiuefax1/image/upload/v1491704303/next_1_z5tu0v.png);
-  background-size: cover;
 }
