--- a/app/assets/stylesheets/carousel.css
+++ b/app/assets/stylesheets/carousel.css
@@ -39,8 +39,12 @@ carousel-outer{
     top: 10%;
     padding: 5px;
     padding-left: 40px;
-    background-color: #2196F3;
+    background-color: #1a1a1a;
     position: absolute;
+}
+
+.Actor-list-heading{
+  border-bottom: 1px solid white;
 }
 
 .carousel{
