--- a/app/assets/stylesheets/carousel.css
+++ b/app/assets/stylesheets/carousel.css
@@ -36,15 +36,22 @@ carousel-outer{
 
 .Actor-list{
   width: 15%;
-    top: 10%;
-    padding: 5px;
-    padding-left: 40px;
-    background-color: #1a1a1a;
-    position: absolute;
+  top: 10%;
+  padding: 5px;
+  padding-left: 40px;
+  background-color: #1a1a1a;
+  position: absolute;
+  padding-bottom: 200px;
 }
 
 .Actor-list-heading{
   border-bottom: 1px solid white;
+}
+
+.Actor-Search{
+  border: 1px solid white;
+  background-color: #1a1a1a;
+  color: white
 }
 
 .carousel{
