Fix css style issues, fix actor search, add movie search, working on actor detail page

--- a/app/assets/stylesheets/carousel.css
+++ b/app/assets/stylesheets/carousel.css
@@ -56,9 +56,10 @@ carousel-outer{
 
 .carousel{
   font-size: 0px;
-  height: 600px;
-  white-space: nowrap;
-  overflow: hidden;
+    white-space: nowrap;
+    overflow: hidden;
+    width: 80%;
+    padding-left: 40px;
 }
 
 .carousel-outer .carousel >div:before {
