--- a/app/assets/stylesheets/index.css
+++ b/app/assets/stylesheets/index.css
@@ -52,12 +52,12 @@ img.movie-searched-poster:hover{
 div.content-holder{
   width: 100%;
   min-height: 650px;
-  background-color: #1A1A1A
+  background-color: #1A1A1A;
+  padding-top: 100px;
 }
 
 div.main-content-splash{
   display: inline-block;
-  position: absolute;
   top: 5%;
   width: 45%;
   font-size: 1.6vw;
@@ -68,6 +68,7 @@ div.main-content-splash{
   flex-direction: column;
   z-index: 2;
   background: linear-gradient(to right, #1A1A1A, 80% rgba(0,0,0,0));
+
 }
 
 h1.main-content-splash{
@@ -91,7 +92,8 @@ img.main-content-splash{
   position: relative;
   float: right;
   width: 35%;
-    max-width: 400px;
+  max-width: 400px;
+  padding-bottom: 100px;
 }
 
 div.search.header-bar{
@@ -108,4 +110,8 @@ div.index-page{
   text-decoration: none;
   display: flex;
   flex-direction: column;
+}
+
+div.movies.comedy{
+  padding-bottom: 90px;
 }
