Add documentation to CSS files

--- a/app/assets/stylesheets/actorDetail.css
+++ b/app/assets/stylesheets/actorDetail.css
@@ -1,3 +1,7 @@
+/* For details on which css files hold relevant information, look in
+the application.css file
+*/
+
 .Actor-Name{
   margin: auto;
   padding-top: 125px;
