--- a/app/assets/stylesheets/loader.css
+++ b/app/assets/stylesheets/loader.css
@@ -1,3 +1,7 @@
+/* For details on which css files hold relevant information, look in
+the application.css file
+*/
+
 div.loading
 {
   background-color: #1A1A1A;
