--- a/app/assets/stylesheets/reset.css
+++ b/app/assets/stylesheets/reset.css
@@ -1,3 +1,7 @@
+/* For details on which css files hold relevant information, look in
+the application.css file
+*/
+
 html, body, div, a, h1, h2, h3, h4, button {
 	margin: 0;
 	padding: 0;
