--- a/app/assets/stylesheets/index.css
+++ b/app/assets/stylesheets/index.css
@@ -1,3 +1,7 @@
+/* For details on which css files hold relevant information, look in
+the application.css file
+*/
+
 input.search{
   height: 32px;
   min-width: 270px;
