--- a/app/assets/stylesheets/rating-star.css
+++ b/app/assets/stylesheets/rating-star.css
@@ -1,3 +1,7 @@
+/* For details on which css files hold relevant information, look in
+the application.css file
+*/
+
 
 fieldset, label { margin: 0; padding: 0; }
 body{ margin: 1px; }
