--- a/app/assets/stylesheets/splash.css
+++ b/app/assets/stylesheets/splash.css
@@ -1,3 +1,7 @@
+/* For details on which css files hold relevant information, look in
+the application.css file
+*/
+
 .movie-selection{
   display: flex;
   margin: 25px;
